force-app/main/default/objects/numm__FA_EntEstablishment__c/numm__FA_EntEstablishment__c.object-meta.xml
<CustomObject>
    <description>Objet des transferts d&#39;établissement</description>
    <label>FA EntiteEtabli</label>
    <nameField>
        <displayFormat>FAEntEta-{000000}</displayFormat>
        <label>Nom de FA EntiteEtabli</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FA EntiteEtablis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>