force-app/main/default/objects/numm__FA_EntEstablishment__c/fields/numm__FA_Fixed_Asset__c.field-meta.xml
<CustomField>
    <fullName>numm__FA_Fixed_Asset__c</fullName>
    <label>Fiche</label>
    <referenceTo>numm__FA_Fixed_Asset__c</referenceTo>
    <relationshipLabel>FA EntiteEtablis</relationshipLabel>
    <relationshipName>FA_EntiteEtablis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>