force-app/main/default/objects/numm__FA_EntEstablishment__c/fields/numm__IdEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__IdEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>FA EntiteEtablis</relationshipLabel>
    <relationshipName>FA_EntiteEtablis</relationshipName>
    <type>Lookup</type>
</CustomField>