force-app/main/default/objects/numm__FA_EntEstablishment__c/fields/numm__IdEstablisment__c.field-meta.xml
<CustomField>
    <fullName>numm__IdEstablisment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etablissement</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>FA EntiteEtablis</relationshipLabel>
    <relationshipName>FA_EntiteEtablis</relationshipName>
    <type>Lookup</type>
</CustomField>